<resources>
    <string name="app_name">29_33_Notifications</string>
    <string name="synchronization">Синхронизация</string>
    <string name="send_priority_notification">Отправить приоритетное оповещение</string>
    <string name="send_normal_notification">Отправить обычное оповещение</string>
    <string name="get_firebase_token">Получить токен firebase</string>
    <string name="transit_to_sync_screen">Перейти на экран синхронизации</string>
    <string name="to_the_chat">К чатику</string>
</resources>