<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/sendPriorityNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/send_priority_notification" />

    <Button
        android:id="@+id/sendSimpleNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/send_normal_notification" />

    <Button
        android:id="@+id/getFirebaseToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/get_firebase_token" />

    <Button
        android:id="@+id/toSynchronizationFragmentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/transit_to_sync_screen" />

    <Button
        android:id="@+id/toChatFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/to_the_chat" />


</LinearLayout>